# releash

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  biome.json  package.json  pnpm-lock.yaml  pwa.html  tsconfig.json  vite.config.pwa.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: CONCEPT.md  agent-scrutiny-direction.md
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/pwa/: pwa.html
src-tauri/resources/pwa/assets/: pwa-CFy2Cihm.css  pwa-Cgh9mvfN.js  pwa-D6QfG-R1.js  pwa-oNCFSa8M.css
src-tauri/src/: config.rs  git.rs  lib.rs  main.rs  protocol.rs  pty.rs  qr_code.rs  search.rs  shell_integration.rs  tls.rs  vpn_detect.rs  watcher.rs  webhook.rs  ws_bridge.rs  ws_server.rs
src/components/layout/: ActivityBar.tsx  HeaderBar.tsx  StatusBar.test.tsx  StatusBar.tsx  TitleBar.tsx
src/components/panels/: CommentList.test.tsx  CommentList.tsx  ConsolePanel.tsx  DeleteConfirmDialog.tsx  EditorPanel.test.tsx  EditorPanel.tsx  EditorTabs.tsx  EmptyState.tsx  FileTree.test.tsx  FileTree.tsx  FileTreeContextMenu.tsx  InlineInput.tsx  MonacoDiffViewer.test.tsx  MonacoDiffViewer.tsx  RemotePanel.tsx  ReviewPanel.test.tsx  ReviewPanel.tsx  SearchPanel.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SidebarPanel.tsx  SourceControlPanel.test.tsx  SourceControlPanel.tsx  TerminalPanel.test.tsx  TerminalPanel.tsx  UnsavedChangesDialog.tsx
src/hooks/: useCurrentBranch.ts  useEditorTabs.test.ts  useEditorTabs.ts  useFileOperations.test.ts  useFileOperations.ts  useFileTree.test.ts  useFileTree.ts  useFileWatcher.ts  useGitActions.test.ts  useGitActions.ts  useGitLog.test.ts  useGitLog.ts  useGitOriginalContent.test.ts  useGitOriginalContent.ts  useGitStatus.test.ts  useGitStatus.ts  useHunks.test.ts  useHunks.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useLineComments.test.ts  useLineComments.ts  useMonacoDiffEditor.test.ts  useMonacoDiffEditor.ts  useMonacoEditor.test.ts  useMonacoEditor.ts  useMonacoGutterEditor.test.ts  useMonacoGutterEditor.ts  useRemoteServer.ts  useSearch.ts  useSettings.test.ts  useSettings.ts  useTerminal.test.ts  useTerminal.ts
src/lib/: applyStatusToTree.test.ts  applyStatusToTree.ts  commentPeekWidget.test.ts  commentPeekWidget.ts  computeHunks.test.ts  computeHunks.ts  formatCommentsForTerminal.test.ts  formatCommentsForTerminal.ts  generatePatch.test.ts  generatePatch.ts  monaco-config.ts  monaco-definition-provider.ts  normalizePath.ts
src/pwa/: PwaApp.tsx  main.tsx
src/test/: setup.ts
src/types/: comment.ts  editor.ts  file-tree.ts  git.ts  protocol.ts  search.ts  settings.ts
(+39 files in other folders)
