[package]
name = "releash"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "releash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
parking_lot = "0.12.5"
notify-debouncer-mini = "0.7"
git2 = "0.19"
ignore = "0.4"
regex = "1"
toml = "0.8"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util"] }
tokio-tungstenite = "0.24"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
futures-util = "0.3"
log = "0.4"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"

[features]
vendored-openssl = ["git2/vendored-openssl"]

[dev-dependencies]
tempfile = "3"

